docs(guidelines): update project coding style analysis with MVP approach [main]

--- a/docs/guidelines/project_coding_style_analysis.json
+++ b/docs/guidelines/project_coding_style_analysis.json
@@ -2,10 +2,10 @@
   "project_overview": {
     "name": "Valeria Core",
     "version": "0.1.2",
-    "description": "AI-powered analytics and chat system for GDO (Grande Distribuzione Organizzata)",
+    "description": "GDO oriented AI system backend with API, Celery workers, and data ingestion capabilities",
     "main_language": "Python",
     "framework": "FastAPI",
-    "database": "PostgreSQL with RLS (Row Level Security)",
+    "database": "PostgreSQL + Qdrant (Hybrid Architecture)",
     "architecture": "Microservices with agent-based system",
     "analysis_date": "2025-10-16",
     "excluded_from_analysis": [
@@ -18,18 +18,22 @@
     "overall_philosophy": {
       "primary_adjectives": [
         "pragmatic",
-        "synthetic", 
-        "enterprise-grade",
-        "security-focused",
+        "mvp-focused",
+        "minimal-viable",
+        "core-features-first",
+        "anti-overengineering",
+        "anti-overkill",
+        "essential-only",
+        "keep-it-simple",
         "well-structured",
         "maintainable",
         "production-ready",
         "domain-driven",
         "type-safe"
       ],
-      "style_description": "The codebase follows a pragmatic, enterprise-grade approach with strong emphasis on domain modeling, type safety, and production readiness. It's not overkill but rather well-balanced between functionality and simplicity, with excellent separation of concerns.",
-      "complexity_level": "moderate",
-      "abstraction_level": "appropriate",
+      "style_description": "The codebase follows a pragmatic, MVP-focused approach with strong emphasis on core functionality, domain modeling, and production readiness. It prioritizes essential features over completeness, with excellent separation of concerns and minimal viable implementation. The codebase explicitly avoids overengineering and overkill, focusing only on what's necessary for the current requirements. The project follows a 'keep it simple' philosophy to ensure the codebase is understandable by other developers. Before implementing any new feature, the team researches Google Scholar and Stack Overflow to verify state-of-the-art approaches and avoid reinventing the wheel.",
+      "complexity_level": "minimal",
+      "abstraction_level": "mvp-appropriate",
       "documentation_quality": "comprehensive"
     },
     "code_organization": {
@@ -61,31 +65,59 @@
       "error_propagation": "controlled"
     },
     "security_approach": {
-      "level": "enterprise-grade",
+      "level": "basic",
       "features": [
-        "Row Level Security (RLS) enforcement",
         "JWT authentication",
         "SQL injection prevention",
-        "query validation",
+        "input validation",
         "access control",
-        "audit logging"
+        "WebSocket security",
+        "rate limiting"
       ],
-      "authentication": "JWT-based with workaround support",
-      "authorization": "role-based with RLS"
+      "authentication": "JWT-based with Auth0",
+      "authorization": "permission-based access control",
+      "missing_features": [
+        "Data encryption at rest/transit",
+        "Security headers (CSP, HSTS)",
+        "HTTP API rate limiting",
+        "Security monitoring",
+        "Audit logging",
+        "Container hardening"
+      ]
     },
     "testing_strategy": {
-      "coverage": "comprehensive",
+      "coverage": "minimal",
       "test_types": [
-        "unit tests",
-        "integration tests", 
-        "performance tests",
-        "security tests",
-        "regression tests",
-        "compatibility tests"
+        "unit tests (1 test)",
+        "integration tests (1 test)"
       ],
       "testing_framework": "pytest",
-      "mocking": "extensive use of unittest.mock",
-      "fixtures": "well-organized"
+      "mocking": "not used in existing tests",
+      "fixtures": "session-level configuration for DB and Celery",
+      "implemented_tests": [
+        "API ingestion tests (integration with real esselunga data)",
+        "Embedder tests (unit test for OpenAI embedder)"
+      ],
+      "test_configuration": {
+        "database_setup": "session-level fixture with DBClient",
+        "celery_config": "synchronous execution with memory broker",
+        "data_sources": "real esselunga product data (5 items)",
+        "test_markers": "integration marker used"
+      },
+      "notebook_tests": {
+        "purpose": "baseline pre-MVP validation",
+        "scope": "certify that ideas follow state-of-the-art practices",
+        "functionality": "verify concepts work and are applicable",
+        "location": "notebooks/ directory with various test scenarios"
+      },
+      "missing_tests": [
+        "Performance tests",
+        "Security tests", 
+        "Regression tests",
+        "Compatibility tests",
+        "Frontend tests",
+        "WebSocket tests"
+      ]
     },
     "data_management": {
       "orm": "SQLModel (Pydantic + SQLAlchemy)",
@@ -119,10 +151,17 @@
     },
     "monitoring_and_observability": {
       "logging": "structured with loguru",
-      "metrics": "custom monitoring system",
-      "health_checks": "comprehensive",
-      "performance_tracking": "built-in",
-      "error_tracking": "detailed"
+      "metrics": "basic logging only",
+      "health_checks": "basic API health checks",
+      "performance_tracking": "not implemented",
+      "error_tracking": "basic error logging",
+      "missing_features": [
+        "Custom monitoring system",
+        "Performance dashboards",
+        "Advanced metrics collection",
+        "Alerting system",
+        "Distributed tracing"
+      ]
     },
     "code_quality_indicators": {
       "type_hints": "comprehensive",
@@ -151,11 +190,13 @@
     "specific_implementation_details": {
       "agent_system": {
         "pattern": "specialized agents with common interface",
-        "types": ["standard", "chef", "healthy", "budget", "analytics"],
+        "types": ["standard", "chef", "healthy", "budget"],
         "communication": "async message passing",
         "state_management": "context-aware",
         "persona_based": "different roles and instructions per agent type",
-        "toolkit_integration": "modular tool system"
+        "toolkit_integration": "modular tool system",
+        "implemented_agents": 4,
+        "agent_framework": "Agnos 1.7.5"
       },
       "domain_modeling": {
         "approach": "rich domain models with Pydantic",
@@ -175,7 +216,10 @@
         "migrations": "automatic schema management",
         "relationships": "well-defined entity relationships",
         "performance": "connection pooling and async operations",
-        "async_support": "full async/await throughout"
+        "async_support": "full async/await throughout",
+        "vector_search": "Qdrant for vector operations",
+        "relational_data": "PostgreSQL for structured data",
+        "hybrid_architecture": "Qdrant + PostgreSQL"
       },
       "api_design": {
         "websocket_support": "real-time chat with security",
@@ -190,7 +234,10 @@
       "dependency_management": "uv with pyproject.toml",
       "code_quality": "pre-commit hooks",
       "testing": "automated with pytest",
-      "documentation": "inline and external docs"
+      "documentation": "inline and external docs",
+      "research_approach": "Google Scholar and Stack Overflow research before implementing new features",
+      "anti_reinvention": "verify state-of-the-art approaches to avoid reinventing the wheel",
+      "simplicity_principle": "keep it simple philosophy for team understanding"
     },
     "deployment_considerations": {
       "containerization": "Docker with multi-stage builds",
@@ -206,39 +253,61 @@
       "Excellent separation of concerns",
       "Strong typing throughout with Pydantic validation",
       "Comprehensive error handling and logging",
-      "Security-first approach with permission system",
+      "Basic security with JWT authentication",
       "Clean API design with WebSocket support",
       "Well-documented code with clear docstrings",
       "Maintainable architecture with clear layering",
       "Flexible product catalog data model",
-      "Async-first design throughout"
+      "Async-first design throughout",
+      "Hybrid database architecture (PostgreSQL + Qdrant)",
+      "Real-time chat with AI agents",
+      "Anti-overengineering philosophy - only essential features implemented",
+      "No unnecessary abstractions or premature optimizations",
+      "Pragmatic approach to feature completeness",
+      "Keep it simple philosophy for team understanding",
+      "Research-driven development with Google Scholar and Stack Overflow",
+      "State-of-the-art verification before implementation"
     ],
     "areas_of_attention": [
       "Complex domain model validation rules",
       "Multiple agent types and their coordination",
       "Extensive enum definitions maintenance",
-      "WebSocket security and rate limiting complexity"
+      "WebSocket security and rate limiting complexity",
+      "Limited test coverage (only 2 test files)",
+      "Basic security implementation (missing encryption, headers)",
+      "No performance monitoring or advanced metrics",
+      "Vector search migration from pgvector to Qdrant",
+      "MVP approach: Focus on core features, defer advanced functionality",
+      "Toolkits not integrated: MealsToolkit and E2BToolkit exist but not used in production",
+      "Intentional minimalism: Some features deliberately not implemented to avoid overengineering",
+      "Balancing completeness vs. complexity in domain models",
+      "Notebook tests serve as pre-MVP baseline validation",
+      "Research-first approach: verify state-of-the-art before implementation",
+      "Keep it simple: ensure codebase is understandable by other developers"
     ],
     "technology_stack": {
       "backend": "Python 3.13+",
       "framework": "FastAPI",
-      "database": "PostgreSQL with asyncpg",
+      "database": "PostgreSQL + Qdrant (Hybrid)",
       "orm": "SQLModel",
-      "authentication": "JWT with PyJWT",
+      "authentication": "JWT with Auth0",
       "logging": "Loguru",
-      "testing": "pytest",
+      "testing": "pytest (minimal coverage)",
       "containerization": "Docker",
       "task_queue": "Celery with Redis",
       "vector_database": "Qdrant",
-      "ai_integration": "OpenAI API"
+      "ai_integration": "OpenAI API",
+      "frontend": "Next.js 15.5.0 + React 19.1.0",
+      "package_manager": "uv (Python) + npm (Node.js)"
     },
     "code_consistency_score": 96,
     "maintainability_score": 94,
-    "security_score": 95,
-    "testability_score": 92,
+    "security_score": 65,
+    "testability_score": 45,
     "documentation_score": 91,
     "domain_modeling_score": 97,
     "type_safety_score": 98,
-    "overall_quality_score": 95
+    "monitoring_score": 40,
+    "overall_quality_score": 75
   }
 }
